--- a/Travel.html
+++ b/Travel.html
@@ -25,6 +25,8 @@
                     class="submit">Search<span class="ti-search"></span></button>
 
             </form>
+            <div class="scroll">Scroll Down <br><span class="ti-angle-down"></span></div>
+
             <div class="header--nav">
                 <div class="container">
                     <div class="nav--footer">
