--- a/Travel.html
+++ b/Travel.html
@@ -11,56 +11,77 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@300;700&family=Roboto:wght@300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@200;300;400;700&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
     <section class="travel__header">
-        <div class="text--header">
-            <div class="head">Bhromaon</div>
-            <div class="head--text">Safe Travel Anywhere</div>
-            <form>
-                <input type="text" name=text" class="search" placeholder="Search Your Travel Destination"><button
-                    class="submit">Search<span class="ti-search"></span></button>
 
-            </form>
-            <div class="scroll">Scroll Down <br><span class="ti-angle-down"></span></div>
+        <div class="head">Bhromaon</div>
+        <div class="head--text">Safe Travel Anywhere</div>
+        <form>
+            <input type="text" name=text" class="search" placeholder="Search Your Travel Destination"><button
+                class="submit">Search<span class="ti-search"></span></button>
 
-            <div class="header--nav">
-                <div class="container">
-                    <div class="nav--footer">
-                        <div class="header__logo">
-                            Bhromaon
+        </form>
+        <div class="scroll">Scroll Down <br><span class="ti-angle-down"></span></div>
+
+        <div class="header--nav">
+            <div class="container">
+                <div class="nav--footer">
+                    <div class="header__logo">
+                        Bhromaon
+                    </div>
+                    <div class="header__body">
+                        <div class="header__burger">
+                            <span></span>
                         </div>
-                        <div class="header__body">
-                            <div class="header__burger">
-                                <span></span>
-                            </div>
-                            <nav class="header__menu">
-                                <ul class="header__list">
-                                    <li>
-                                        <a href="#" class="header__link">WHO WE ARE</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="header__link">What We Do</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="header__link">Travel With Us</a>
-                                    </li>
-                                    <li>
-                                        <a href="#" class="header__link">Contact Us</a>
-                                    </li>
+                        <nav class="header__menu">
+                            <ul class="header__list">
+                                <li>
+                                    <a href="#" class="header__link">WHO WE ARE</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="header__link">What We Do</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="header__link">Travel With Us</a>
+                                </li>
+                                <li>
+                                    <a href="#" class="header__link">Contact Us</a>
+                                </li>
 
-                                </ul>
-                            </nav>
-                        </div>
+                            </ul>
+                        </nav>
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
-    <section class="travel__what"></section>
+    <section class="travel__why">
+        <div class="container">
+            <div class="why__left">
+                <div class="left--head">Why Choose Us</div>
+                <div class="left--text1">Tion and dislike men who are so beguiled and demoralized by desire by the
+                    charms
+                    of pleasure of the moment, so blinded by desire, that they cannot foresee
+
+                    <div class="left--text2"> Ddislike men who are so beguiled and demoralized by the charms of pleasure
+                        of the moment, so
+                        blinded
+                        by desire, that.</div>
+                </div>
+                <button class="why__button">Explore Places </button>
+            </div>
+            <div class="why__right">
+                <div class="image1"><img src="./img/Image2_why.png" alt=""></div>
+                <div class="image2"><img src="./img/Image3_why.png" alt=""></div>
+            </div>
+
+        </div>
+    </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
