--- a/Travel.html
+++ b/Travel.html
@@ -40,7 +40,7 @@
                         <nav class="header__menu">
                             <ul class="header__list">
                                 <li>
-                                    <a href="#" class="header__link">WHO WE ARE</a>
+                                    <a href="#travel__why" class="header__link">WHO WE ARE</a>
                                 </li>
                                 <li>
                                     <a href="#" class="header__link">What We Do</a>
@@ -60,7 +60,7 @@
 
         </div>
     </section>
-    <section class="travel__why">
+    <section class="travel__why" id="travel__why">
         <div class="container">
             <div class="why__left">
                 <div class="left--head">Why Choose Us</div>
@@ -79,10 +79,27 @@
                 <div class="image1"><img src="./img/Image2_why.png" alt=""></div>
                 <div class="image2"><img src="./img/Image3_why.png" alt=""></div>
             </div>
-
         </div>
     </section>
-
+    <section class="travel__what">
+        <div class="container">
+            <div class="what--left">
+                <div class="what--icon"><span class="ti-search"></span></div>
+                Search Places
+            </div>
+            <div class="shape1"></div>
+            <div class="what--center">
+                <div class="what--icon"><span class="ti-arrow-circle-down"></span></div>
+                Select Places
+            </div>
+            <div class="shape2"></div>
+            <div class="what--right">
+                <div class="what--icon"><span class="ti-thumb-up"></span>
+                </div>
+                Book & Enjoy
+            </div>
+        </div>
+    </section>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
 </body>
