--- a/Travel.html
+++ b/Travel.html
@@ -11,12 +11,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@200;300;400;700&family=Roboto:wght@300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@100;200;300;400;700&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-    <section class="travel__header">
+    <section class="travel__header" id="travel__who">
 
         <div class="head">Bhromaon</div>
         <div class="head--text">Safe Travel Anywhere</div>
@@ -40,10 +40,10 @@
                         <nav class="header__menu">
                             <ul class="header__list">
                                 <li>
-                                    <a href="#travel__why" class="header__link">WHO WE ARE</a>
+                                    <a href="#travel__who" class="header__link">WHO WE ARE</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="header__link">What We Do</a>
+                                    <a href="#travel__why" class="header__link">What We Do</a>
                                 </li>
                                 <li>
                                     <a href="#" class="header__link">Travel With Us</a>
@@ -99,6 +99,21 @@
                 Book & Enjoy
             </div>
         </div>
+    </section>
+    <section class="travel__with1">
+        <div class="container">
+            <div class="with--main">
+                <div class="main--country">Spain</div>
+                <div class="main--head">Grand Spain Madrid</div>
+                <div class="main--text">But I must explain to you how all this mistaken idea of account to denouncing
+                    pleasure and praising pain was account born and I account will give you a complete account of the
+                    system</div>
+                <button class="with__button">Book now </button>
+            </div>
+        </div>
+    </section>
+    <section class="travel__with2">
+
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
