--- a/Travel.html
+++ b/Travel.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@100;200;300;400;700&family=Roboto:wght@300&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@100;200;300;400;700&family=Lato:wght@300&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
 </head>
 
@@ -46,7 +46,7 @@
                                     <a href="#travel__why" class="header__link">What We Do</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="header__link">Travel With Us</a>
+                                    <a href="#travel__with1" class="header__link">Travel With Us</a>
                                 </li>
                                 <li>
                                     <a href="#" class="header__link">Contact Us</a>
@@ -100,7 +100,7 @@
             </div>
         </div>
     </section>
-    <section class="travel__with1">
+    <section class="travel__with1" id="travel__with1">
         <div class="container">
             <div class="with--main">
                 <div class="main--country">Spain</div>
@@ -113,7 +113,36 @@
         </div>
     </section>
     <section class="travel__with2">
+        <div class="container">
+            <div class="with--main">
+                <div class="main--country">Spain</div>
+                <div class="main--head">Grand Spain Madrid</div>
+                <div class="main--text">But I must explain to you how all this mistaken idea of account to denouncing
+                    pleasure and praising pain was account born and I account will give you a complete account of the
+                    system</div>
+                <button class="with__button">Book now </button>
+            </div>
+        </div>
+    </section>
+    <section class="travel__say">
+        <div class="container">
+            <div class="say--head">What Our Tourist Say</div>
+            <div class="say--main">
+                <img src="./img/Say2.png" alt="">
+                <div class="main--text">
+                    <div>Sam Sumon</div>
+                    <span>“</span>
+                    But I must explain to you how all this mistaken idea of account to denouncinpleasure
+                    and
+                    praising
+                    pain But I must explain to you how all this mistaken idea of account to nai denouncing pleasure
+                    and
+                    praising pain was account born and I account will give you a complete account of the system was
+                    account born and I account will give you a nai the complete account of the system
 
+                </div>
+            </div>
+        </div>
     </section>
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
     <script src="js/script.js"></script>
