--- a/Travel.html
+++ b/Travel.html
@@ -13,6 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Aleo&family=Josefin+Sans:wght@100;200;300;400;700&family=Lato:wght@300&family=Roboto:wght@300&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+        integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -49,7 +51,7 @@
                                     <a href="#travel__with1" class="header__link">Travel With Us</a>
                                 </li>
                                 <li>
-                                    <a href="#" class="header__link">Contact Us</a>
+                                    <a href="#travel__footer" class="header__link">Contact Us</a>
                                 </li>
 
                             </ul>
@@ -140,6 +142,31 @@
                     praising pain was account born and I account will give you a complete account of the system was
                     account born and I account will give you a nai the complete account of the system
 
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="travel__footer" id="travel__footer">
+        <div class=" container">
+            <div class="footer--main">
+                <div class="logo">Bhromaon</div>
+                <div class="text">Safe Travel Anywhere</div>
+                <div class="icons">
+                    <div class="facebook">
+                        <a href="#" target="_blank"> <i class="fab fa-facebook-f"></i></a>
+                    </div>
+                    <div class="twitter">
+                        <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
+                    </div>
+                    <div class="linkedin">
+                        <a href="#" target="_blank"><i style="color: dodgerblue;" class="fab fa-linkedin-in"></i></a>
+                    </div>
+                    <div class="youtube">
+                        <a href="#" target="_blank"><i class="fab fa-youtube-square"></i></a>
+                    </div>
+                    <div class="pinterest">
+                        <a href="#" target="_blank"><i class="fab fa-pinterest"></i></a>
+                    </div>
                 </div>
             </div>
         </div>
