--- a/Travel.html
+++ b/Travel.html
@@ -27,7 +27,9 @@
                 class="submit">Search<span class="ti-search"></span></button>
 
         </form>
-        <div class="scroll">Scroll Down <br><span class="ti-angle-down"></span></div>
+        <a href="#down">
+            <div class="scroll">Scroll Down <br><span class="ti-angle-down"></span></div>
+        </a>
 
         <div class="header--nav">
             <div class="container">
@@ -126,7 +128,7 @@
             </div>
         </div>
     </section>
-    <section class="travel__say">
+    <section class="travel__say" id="down">
         <div class="container">
             <div class="say--head">What Our Tourist Say</div>
             <div class="say--main">
